# electron

./: .eslintrc-auto-import.json  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  LICENSE  READ.MD  README.md  auto-imports.d.ts  components.d.ts  electron.vite.config.ts  forge.config.ts  forge.env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.render.json  tsconfig.web.json  vite.main.config.ts  vite.only.render.ts  vite.preload.config.ts  vite.renderer.config.ts  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
config/: config.db
images/: icon.icns
node-core/: .gitignore  CMakeLists.txt  README.MD  binding.gyp  package.json  unihelper-core.d.ts  vite.config.js
node-core/lib/: index.js
node-core/src/: openExplorer.cc  unihelper-core.cc
shell/: curl.ps1  get-environment.ps1  install-gradle.ps1  keytools-gen.ps1  keytools-show.ps1  set-android.ps1  set-envirement.ps1  set-environment-path.ps1  set-environment.ps1
src/: global.d.ts  index.css  index.html  index.ts  main.ts  preload.ts  renderer.ts
src/compo/: env.ts
src/main/: index.ts  main.ts
src/main/package/db/: index.ts
src/main/services/: base.ts  contain.ts  index.ts
src/main/services/modules/: system.manager.ts  version-manager.ts
src/main_/: constants.ts
src/main_/controller/: ExecController.ts  ScreenController.ts  StoreController.ts  ToolsController.ts  errorBase.ts  index.ts  screen.ts  storeControll.ts
src/main_/controller/RenderController/: baseRenderController.ts  setting.ts
src/main_/controller/core/: createProject.ts  fileReplace.ts
src/main_/core/: Tray.ts
src/main_/core/db/: sqlite.db.ts
src/main_/utils/: cache.ts  exec.ts  extractFile.ts  feedback.ts  folder.ts  index.ts  json.ts
src/preload/: preload.ts
src/render/: App.vue  renderer.ts
src/render/ipc/: ipc.ts
src/render/router/: index.ts
src/render/utils/: index.ts
src/render/views/: index.vue
src/render/views/components/: NavigationHeader.vue
src/render_/: App.vue
src/render_/components/: Button.vue  Spinner.vue
src/render_/components/Icons/: Base.jsx  BaseIconProps.ts  BlowDown.jsx  BlowUp.jsx  Close.jsx  MiniDesk.jsx  Refresh.jsx  Settings.jsx
src/render_/components/ui/: Dialog.vue  data-table.jsx
src/render_/layout/: index.vue  layout-header.vue
src/render_/layout/components/: Popup.vue
src/render_/pages/: index.vue
src/render_/router/: index.ts
src/render_/utils/: index.ts  ipc.ts
src/renderer/src/: App.vue
src/types/: electron-app.d.ts  global.d.ts  interface.d.ts  shims-element-plus.d.ts  ui-table.d.ts
vite/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.base.config.ts  vite.renderer.config.ts
vite/src/: main.ts  renderer.ts
vite/src/main_/utils/: cache.ts
vite/src/render_/: App.vue
(+14 files in other folders)
